# bibliotheca-open-client

./: .gitignore  AGENTS.md  NOTICE  README.md  pyproject.toml
src/bibliotheca_open_client/: __init__.py  __main__.py  client.py  models.py  parser.py
tests/: test_client.py  test_loans.py  test_parser.py
