[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "bibliotheca-open-client"
version = "0.1.0"
description = "Async Python client for bibliotheca-open.de library accounts"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12",
    "beautifulsoup4>=4.12",
]

[project.urls]
Repository = "https://github.com/BAERnado/bibliotheca-open-client"

[tool.setuptools.packages.find]
where = ["src"]
